<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpdateBio">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="20dp"
        tools:layout_editor_absoluteY="20dp">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="start"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            app:srcCompat="@drawable/ic_go_back" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="40dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="40dp"
                    android:fontFamily="@font/oxygen_bold"
                    android:text="@string/text_prompt_bio"
                    android:textAlignment="viewStart"
                    android:textColor="@color/colorPrimary"
                    android:textSize="26sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/back"
                    android:orientation="vertical"
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="12dp">

                    <TextView
                        android:id="@+id/bioKey"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/pt_sans_bold"
                        android:text="@string/text_prompt_label_bio"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/bioValue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:ems="10"
                        android:fontFamily="@font/pt_sans_bold"
                        android:inputType="textPersonName"
                        android:singleLine="false"
                        android:text="@string/text_sample_bio"
                        android:textColor="@color/colorPrimary"
                        android:textSize="20sp" />
                </LinearLayout>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/update_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:fontFamily="@font/pt_sans_bold"
                    android:shadowColor="@color/colorPrimary"
                    android:shadowDx="80"
                    android:shadowDy="50"
                    android:shadowRadius="5"
                    android:text="@string/button_update"
                    android:textAllCaps="false"
                    android:textColor="@color/colorBackground"
                    android:textSize="16sp" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>