<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView_editTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="75dp"
                android:fontFamily="@font/oxygen_bold"
                android:paddingVertical="15dp"
                android:text="@string/text_title_edit"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textSize="30sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/profilePicture"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:srcCompat="@tools:sample/avatars[0]" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="35dp">

                <LinearLayout
                    android:id="@+id/select_name_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clickable="true"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:layout_marginBottom="15dp"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:paddingHorizontal="10dp"
                        android:paddingVertical="5dp">

                        <TextView
                            android:id="@+id/textView_nameKey"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:fontFamily="@font/pt_sans_bold"
                            android:text="@string/text_label_name"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="18sp" />

                        <!-- <EditText
                        android:id="@+id/editText_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/text_hint"
                        android:importantForAutofill="no"
                        android:inputType="textPersonName" /> -->

                        <TextView
                            android:id="@+id/textView_nameValue"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:fontFamily="@font/pt_sans_bold"
                            android:text="@string/text_sample_name"
                            android:textColor="@color/colorPrimary"
                            android:textSize="20sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="5"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/select1"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            app:srcCompat="@drawable/ic_proceed" />
                    </LinearLayout>

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dip"
                    android:layout_gravity="center"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="2dp"
                    android:background="@color/colorViewBreak" />

                <LinearLayout
                    android:id="@+id/select_phone_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clickable="true"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginHorizontal="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="15dp"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView_phoneKey"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/pt_sans_bold"
                            android:text="@string/text_label_phone"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/textView_phoneValue"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:fontFamily="@font/pt_sans_bold"
                            android:text="@string/text_sample_phone"
                            android:textColor="@color/colorPrimary"
                            android:textSize="20sp" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="5"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/select2"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            app:srcCompat="@drawable/ic_proceed" />
                    </LinearLayout>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dip"
                    android:layout_gravity="center"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="2dp"
                    android:background="@color/colorViewBreak" />

                <LinearLayout
                    android:id="@+id/select_email_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clickable="true"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginHorizontal="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="15dp"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView_emailKey"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/pt_sans_bold"
                            android:text="@string/text_label_email"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/textView_emailValue"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:fontFamily="@font/pt_sans_bold"
                            android:text="@string/text_sample_email"
                            android:textColor="@color/colorPrimary"
                            android:textSize="20sp" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="5"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/select3"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            app:srcCompat="@drawable/ic_proceed" />
                    </LinearLayout>
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dip"
                    android:layout_gravity="center"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="2dp"
                    android:background="@color/colorViewBreak" />

                <LinearLayout
                    android:id="@+id/select_bio_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clickable="true"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginHorizontal="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="15dp"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView_bioKey"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/pt_sans_bold"
                            android:text="@string/text_label_bio"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/textView_bioValue"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:fontFamily="@font/pt_sans_bold"
                            android:text="@string/text_sample_bio"
                            android:textColor="@color/colorPrimary"
                            android:textSize="20sp" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="5"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/select4"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            app:srcCompat="@drawable/ic_proceed" />
                    </LinearLayout>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dip"
                    android:layout_gravity="center"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="2dp"
                    android:background="@color/colorViewBreak" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>